--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -1,15 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 body{
     margin: 0;
     font-family: sans-serif;
 }
 .container{
-    max-width: 1200px;
-    
+    /* max-width: 1200px; */
 }
 
 
 
 .site-header {
+    width: 100vw;
     background: linear-gradient(90deg, #0b3a45, #0a2f38);
     padding: 15px 0;
     color: #fff;
@@ -96,4 +97,232 @@ body{
 
 .icon-btn:hover {
     opacity: 0.8;
+}
+
+/* contact-page */
+
+
+.img img {
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+h1 {
+    color: #0b3a45;
+    font-family: sans-serif;
+    font-size: 26px;
+    font-weight: 300;
+    text-align: center;
+}
+.container-contact-form{
+    padding: 12px 16px;
+    margin-top: 50px;
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.contact-form{
+    padding: 12px 5px;
+    border-bottom: 1px solid #0b3a45;
+}
+.container-contact-form h1{
+    font-family: "Roboto", sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    text-align: left;
+    margin-right: 500px;
+    color: #000000;
+}
+.contact-form p{
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+     text-align: left;
+      color: #000000;
+    
+}
+.form{
+    width: 46%;
+    padding: 12px 16px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+label{
+    font-family: "Roboto", sans-serif;
+    color: #0b3a45;
+    font-size: 19px;
+    font-weight: 300;
+}
+input{
+    width: 96%;
+    padding: 12px 16px;
+    border-radius: 5px;
+    border: none;
+     font-family: "Roboto", sans-serif;
+     border: 1px solid #0b3a45;
+}
+
+textarea{
+    border-radius: 5px;
+    border: none;
+    height: 125px;
+     font-family: "Roboto", sans-serif;
+     padding: 16px 16px;
+     border: 1px solid #0b3a45;
+    resize: none;
+}
+.form h1{
+    font-family: "Roboto", sans-serif;
+}
+.form h1 a{
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    padding: 15px 30px;
+    background-color: #0b3a45;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #ffffff;
+}
+.form h1 a:hover{
+    transform: scale(1.1);
+    background-color: #ff7300;
+}
+.icon{
+    width: 100vw;
+    padding: 20px 0px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+}
+.icon a{
+    text-decoration: none;
+    color: #000000;
+    
+
+}
+.icon a i{
+    color: #000000;
+    font-size: 40px;
+}
+.icon a i:hover{
+    color: #ff7300;
+}
+.number-phone{
+    text-align: center;
+    font-size: 30px;
+}
+
+
+/* About-page */
+
+.video{
+    padding: 0px 0px;
+    background-color: #ff7300;
+    height: 600px;
+    position: relative;
+}
+.video h1{
+    position: absolute;
+    top: 150px;
+    left: 0;
+    right: 0;
+    font-size: 100px;
+    font-weight: bold;
+    color: #ff8800;
+}
+.video video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.the-campunt{
+    width: 100vw;
+    padding: 12px 0px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.box-of-information{
+    width: 70%;
+    display: flex;
+    
+}
+.vision {
+    width: 40%;
+    padding: 15px 15px;
+    background-color: #0b3a45;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+.vision h1{
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    color: #fff;
+    font-weight: 500;
+}
+.vision p{
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 300;
+    color: #fff;
+}
+.information{
+    width: 60%;
+    padding: 15px 15px;
+    background-color: #14b8a6;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.information h1{
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    font-weight: 500;
+}
+.information p{
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 300;
+}
+.our-values{
+    width: 100vw;
+    padding: 12px 0;
+    background-color: #000000;
+    margin-top: 30px;
+     text-align: center;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+}
+.values {
+    width: 70%;
+    padding: 12px 0;
+    flex-direction: column;
+}
+.values-comlun{
+    width: 100%;
+    padding: 12px 0;
+    display: flex;
+}
+.picture{
+    width: 30%;
+    height: 100%;
+    background-color: aqua;
+}
+.picturre img{
+    width: 50%;
+    height: 50%;
+    object-fit: cover ;
+}
+.text{
+    width: 70%;
+    padding: 12px 0;
+    background-color: #fff;
 }
