--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -326,3 +326,38 @@ textarea{
     padding: 12px 0;
     background-color: #fff;
 }
+/* location-page */
+.location-hero{
+    width: 100vw;
+    /* background-color: #0fa293; */
+}
+.logo{
+    width: 100%;
+    height: 400px;
+    background-color: aqua;
+}
+.logo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.location-hero h1{
+    padding: 10px;
+    margin: 0;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 50px;
+}
+.location-all{
+    width: 70%;
+    padding: 12px 0;
+    margin: auto;
+}
+.picture-of-location{
+    width: 100%;
+
+     text-align: center;
+}
+.picture-of-location img{
+    text-align: center;
+}
