--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -352,12 +352,20 @@ textarea{
     width: 70%;
     padding: 12px 0;
     margin: auto;
+    display: flex;
+    gap: 40px;
+    
 }
 .picture-of-location{
     width: 100%;
-
-     text-align: center;
+    display: flex;
+    text-align: center;
 }
 .picture-of-location img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     text-align: center;
+    border: 1px solid #000;
+    border-radius: 6px;
 }
