--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -12,20 +12,21 @@
 
 .site-header {
     background: linear-gradient(90deg, #0b3a45, #0a2f38);
-    padding: 20px 0;
+   
     color: #fff;
     top: 0;
     margin: 0;
     width: 1200px;
     min-width: 100%;
     z-index: 1000;
+    height: 140px;
     left: 0;
     position: fixed;
 }
 
 
 .header-container {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 20px;
     display: flex;
@@ -33,19 +34,25 @@
     align-items: center;
     justify-content: space-between;
 }
-
+.site-logo {
+  width: 20%;
+  height: auto;
+  margin-top: -30px;
+  /* background-color: black; */
+}
 
 .site-logo img {
-    height: 80px;
+    height: 200px;
 }
 
 
 .main-navigation .main-menu {
     display: flex;
-    gap: 30px;
+    gap: 65px;
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-top: -40px;
 }
 .main-navigation .main-menu ul {
     display: flex;
@@ -59,7 +66,7 @@
     color: #fff;
     text-decoration: none;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .main-navigation .main-menu li a:hover {
@@ -137,6 +144,11 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    margin-top: -55px;
+}
+.header-actions span {
+  width: 40px;
+  font-size: 30px;
 }
 
 .header-link {
@@ -175,7 +187,7 @@
 
 
 
-    /* ================= HERO ================= */
+
 .hero {
     display: flex;
     height: 700px;
@@ -250,7 +262,7 @@
     display: flex;
     margin: auto;
     width: 70%;
-    top: -180px;
+    top: -140px;
     position: relative;
     z-index: 3;
     }
@@ -287,9 +299,20 @@
     border: 2px solid #17dcdc;
     color: #17dcdc;
     font-size: 15px;
+    
     border-radius: 30px;
     cursor: pointer;
     }
+.emergency button a{
+    list-style: none;
+    color: red;
+    text-decoration: none;
+
+}
+.emergency button a:hover{
+  color: white;
+  
+}
 
 .appointment {
     width: 50%;
@@ -529,7 +552,7 @@ footer {
 
 
 .about-section {
-    padding: 60px 20px;
+    padding: 30px;
     background-color: #f9fbfb;
     margin-top: 50px;
 }
