--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -1411,6 +1411,87 @@ footer {
   padding: 10px 20px;
   cursor: pointer;
 }
+/* PAGE BANNER */
+.page-banner {
+  height: 1000px;
+  background: url("http://jubha-hospital.test/wp-content/uploads/2026/01/dayos.jpg") center/cover no-repeat;
+  position: relative;
+}
+
+.banner-overlay {
+  background: rgba(0, 0, 0, 0.45);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 80px;
+  color: #fff;
+}
+
+.banner-overlay h1 {
+  font-size: 48px;
+  margin-bottom: 10px;
+  margin-left: 300px;
+
+}
+
+.breadcrumb {
+  background: #4fa3a35d;
+  display: inline-block;
+  padding: 20px 40px;
+  border-radius: 5px;
+  font-size: 14px;
+  height: -31%;
+  width: 20%;
+  margin-left: 300px;
+}
+.icon-1 a{
+  color: #000000cf;
+  font-size: 20px;
+
+}
+
+
+/* CONTENT */
+.offers-section {
+  padding: 100px 0;
+  background: #fff;
+}
+
+.offers-container {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+
+/* LEFT */
+.offers-text {
+  flex: 1;
+}
+
+.offers-text h2 {
+  font-size: 32px;
+  color: #0b4a5a;
+}
+
+
+.offers-image {
+  flex: 1;
+  /* background: #0a8f4c; */
+  /* background-image: url(http://jubha-hospital.test/wp-content/uploads/2026/01/day.webp); */
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.offers-image img {
+  max-width: 100%;
+  height: auto;
+}
+
 
 
                                                                                     
