--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -190,11 +190,10 @@
 
 .hero {
     display: flex;
-    height: 700px;
+    width: 100%;
+    height: 80vh;
     overflow: hidden;
-    background: #fff;
-    }
-
+}
     /* LEFT TEXT */
 .hero-text {
     width: 45%;
