--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -466,7 +466,10 @@ footer {
   grid-template-columns: 2fr 1fr;
   gap: 40px;
 }
-
+h1{
+  text-align: center;
+  padding: 30px;
+}
 .newsletter h3 {
   font-size: 18px;
   margin-bottom: 15px;
